# LuoYunCloud

./: .gitignore  Makefile  README
compute/: .gitignore  Makefile  domain.c  domain.h  handler.c  handler.h  lynode.c  node.c  node.h  options.c  options.h  server.c  server.h
control/: .gitignore  Makefile  client_manager.h  handler.c  handler.h  instance_manager.c  job_manager.c  job_manager.h  lyclc.h  node_manager.c  node_manager.h  postgres.c  postgres.h  server.c  server.h
docs/: index.html
docs/AdminGuide/: Makefile  make.bat
docs/AdminGuide/source/: conf.py  index.rst
docs/_themes/cloud/: layout.html  theme.conf
docs/_themes/greencloud/: theme.conf
docs/_themes/redcloud/: theme.conf
docs/design/: Makefile  make.bat
docs/design/source/: architecture.rst  conf.py  custom_message.rst  index.rst  linux_system_status_check.rst
docs/sphinx/: Makefile  make.bat
docs/sphinx/source/: conf.py  intro.rst
lyosm/pyosm/: lydef.py  lylog.py  lyproc.py
lyweb/: .gitignore  LuoYunConf.py  context_processors.py  lmanage.py  lsettings.py  luoyun.cfg  luoyun.cfg.example  lycustom.py  lyforms.py  lyorm.py  manage.py  settings.py  site.py  start  urls.py  util.py  views.py
lyweb/app/account/: admin_views.py  forms.py  models.py  urls.py  user_views.py  utils.py  views.py
lyweb/app/admin/: .gitignore  appliance_views.py  forms.py  group_views.py  instance_views.py  job_views.py  node_views.py  permission_views.py  system_views.py  urls.py  user_views.py  views.py  wiki_views.py
lyweb/app/api/: urls.py  views.py
lyweb/app/appliance/: forms.py  models.py  urls.py  views.py
lyweb/app/auth/: models.py  urls.py  utils.py
lyweb/app/domain/: admin_views.py  forms.py  models.py  urls.py  views.py
lyweb/app/forum/: admin_views.py  forms.py  models.py  urls.py  views.py
lyweb/app/home/: models.py  (+2 more)
lyweb/docs/: README.zh_CN  i18n.zh_CN
lyweb/lib/: .gitignore  IPy.py  lymail.py  mako  markdown  sqlalchemy  tornado  wtforms  ytime.py
lyweb/scripts/: django-admin
lyweb/static/: .gitignore
lyweb/template/: 404.html  base.html  mako_failed.html  site_notice_base.html
lyweb/templates/: base.html  home.html  login.html
lyweb/tool/: 0.5.9_0.6.1.sql  add_default_network.py  domain.py  firewall.py  initdb-postgresql.sh  luoyuncloud_default.py  lymaster.py  network.py  nginx.py  schema.sql  update0.4-to-0.5.py  update0.5-to-0.6.py  upload-appliance.py
lyweb2/: .gitignore  lycustom.py  lydb.py  settings.py  site.py  urls.py
lyweb2/lib/: .gitignore  yimage.py
lyweb2/template/: base.html
lyweb2/tool/: schema.sql
osmanager/: .gitignore  Makefile  README  handler.c  install.sh  osmanager.h  osmanager.sh  server.c  server.h  setup.sh  uninstall.sh
osmanager/pyosc/: osconfig.py  start
osmanager/pyosm/: lyapp.py  lyconf.py  lyconn.py  lylog.py  lyosm.py  lyutil.py  start
osmanager/pyweb/: luoyuninfo.py  lyweb.py  start
osmanager/scripts/: status
osmanager/webssh/: start  webssh.py
platform/: AUTHORS  CODING  INSTALL  Makefile.am  Makefile.in  NEWS  README.in  THANKS  config.h  config.h.in  configure  configure.ac
platform/conf/: Makefile.am  Makefile.in  lyclc.conf  lyclc.conf.in  lynode.conf  lynode.conf.in
platform/doc/: Makefile.am  Makefile.in
platform/lib/: .gitignore  Makefile.am  Makefile.in  ding-libs
platform/lib/ding-libs/dhash/: dhash.c  dhash.h
platform/lib/ding-libs/ini/: ini_comment.c
platform/lib/ding-libs/refarray/: ref_array.c  ref_array.h
platform/lib/ding-libs/trace/: trace.h
platform/lib/json-parser/: Makefile.am  Makefile.in  json.c  test.c
platform/m4/: Makefile.am  Makefile.in  lf_cc.m4  lf_warnings.m4
platform/release/: README  doit  install.sh
platform/release/centos6/opt/LuoYun/platform/etc/luoyun-cloud/: lynode.conf
platform/src/: Makefile.am  Makefile.in  luoyun-template.c
platform/src/clc/: .gitignore  Makefile.am  Makefile.in  client_manager.c  entity.c  entity.h  ev_node.c  ev_osm.c  events.c  events.h  handler.c  handler.h  instance_manager.h  job_manager.c  lyclc.c  lyclc.h  lyjob.c  lyjob.h  lyjob2.c  mcast.c  node.c  node.h  node_manager.c  node_manager.h  options.c  options.h  postgres.c  postgres.h
platform/src/compute/: .gitignore  Makefile.am  Makefile.in  domain.c  domain.h  events.c  events.h  handler.c  handler.h  lynode.c  lynode.h  node.c  node.h  options.c  options.h
platform/src/luoyun/: .gitignore  Makefile.am  Makefile.in  luoyun.c  luoyun.h
platform/src/osmanager/: .gitignore  Makefile.am  Makefile.in  Makefile.standalone  events.c  events.h  lyauth.c  lyauth.h  lyosm.h  lypacket.c  lypacket.h  options.c  options.h  osmanager.c  osmanager.h  osmlog.c  osmlog.h  osmmisc.c  osmmisc.h  osmutil.c  osmutil.h
platform/src/util/: Makefile.am  Makefile.in  base64.c  base64.h  disk.c  disk.h  download.c  download.h  list.h  logging.c  logging.h  luoyun.h  lyauth.c  lyauth.h  lypacket.c  lypacket.h  lyutil.c  lyutil.h  lyxml.c  lyxml.h  lyxml_data.c  md5.c  md5.h  misc.c  misc.h  test.c
platform/test/: Makefile  cmds.xml  t  t_lynode.c  t_util_bunzip.c  t_util_print_dpt.c  test_c99.c  test_clc.c  test_crypt.c  test_echo.c  test_getconf.c  test_getfreemem.c  test_getmem.c  test_list.c  test_lydl.c  test_lynode.c  test_lyosm.c  test_md5.c  test_misc.c  test_mount.partial.c  test_nodeenable.c  test_old_lynode.c  test_pidfile.c  test_pq.c  test_socket.c  test_vm.c  test_xml.c
platform/test/md5files/: t
platform/tools/: img2clc.sh  restart  restart.in  start.in  stop.in
release/: README  doit  install.sh
test/: .gitignore  Makefile  t_util_print_dpt.c
tools/: compute_server.conf  httpd.conf  img2clc.sh  install-node.sh  install-web-0.5.sh  install-web.sh  luoyu.conf  luoyun-service  luoyuntrash  lyclc  lyclcd.initscript  lynode  lynoded.initscript  lyweb  mod.wsgi  nginx.conf  nginx.conf.example  restart  supervisord.conf  t_xmlrpc.py
tools/init/: lyclc.conf  lynode.conf  lyweb.conf  nginx.conf
tools/spec/: luoyuncloud-osm.spec  luoyuncloud.spec
util/: Makefile  disk.c  disk.h  download.c  download.h  luoyun.c  luoyun.h  lyerrno.h  misc.c  misc.h
win-osmanager/: README
(+828 files in other folders)
